*SVN*

* Don't unnecessarily load has_many associations in after_update callbacks.  Closes #6822 [stopdropandrew, canadaduane]

* Eager belongs_to :include infers the foreign key from the association name rather than the class name.  #10517 [Jonathan Viney]

* SQLite: fix rename_ and remove_column for columns with unique indexes.  #10576 [Brandon Keepers]

* Ruby 1.9 compatibility.  #10655 [Jeremy Kemper, Dirkjan Bussink]


*2.0.2* (December 16th, 2007)

* Ensure optimistic locking handles nil #lock_version values properly.  Closes #10510 [rick]

* Make the Fixtures Test::Unit enhancements more supporting for double-loaded test cases.  Closes #10379 [brynary]

* Fix that validates_acceptance_of still works for non-existent tables (useful for bootstrapping new databases).  Closes #10474 [hasmanyjosh]

* Ensure that the :uniq option for has_many :through associations retains the order.  #10463 [remvee]

* Base.exists? doesn't rescue exceptions to avoid hiding SQL errors.  #10458 [Michael Klishin]

* Documentation: Active Record exceptions, destroy_all and delete_all.  #10444, #10447 [Michael Klishin]


*2.0.1* (December 7th, 2007)

* Removed query cache rescue as it could cause code to be run twice (closes #10408) [DHH]


*2.0.0* (December 6th, 2007)

* Anchor DateTimeTest to fixed DateTime instead of a variable value based on Time.now#advance#to_datetime, so that this test passes on 64-bit platforms running Ruby 1.8.6+ [Geoff Buesing]

* Fixed that the Query Cache should just be ignored if the database is misconfigured (so that the "About your applications environment" works even before the database has been created) [DHH]

* Fixed that the truncation of strings longer than 50 chars should use inspect
so newlines etc are escaped #10385 [Norbert Crombach]

* Fixed that habtm associations should be able to set :select as part of their definition and have that honored [DHH]
